--- a/index.html
+++ b/index.html
@@ -138,6 +138,21 @@
             box-shadow: 0 0 50px rgba(244, 63, 94, 0.2); padding: 30px;
         }
 
+        /* --- FIXED INTRO OVERLAY --- */
+        #view-intro {
+            position: fixed; 
+            inset: 0; 
+            width: 100vw; 
+            height: 100vh; 
+            z-index: 9999; /* Highest priority */
+            background: var(--bg-deep);
+            display: flex; 
+            flex-direction: column; 
+            align-items: center; 
+            justify-content: center; /* Center Vertically and Horizontally */
+            text-align: center;
+        }
+
         /* LAYOUT */
         .layout { display: flex; height: 100vh; overflow: hidden; width: 100%; }
         .sidebar { 
